@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-07T00:33:10Z",
-  "count_outdated" : 40,
-  "uniques_outdated" : 6,
+  "timestamp" : "2022-05-07T08:09:11Z",
+  "count_outdated" : 41,
+  "uniques_outdated" : 7,
   "count" : 49,
   "uniques" : 15,
   "views" : [
-    {
-      "timestamp": "2022-04-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-24T00:00:00Z",
       "count": 1,
