@@ -1,12 +1,7 @@
 {
-  "count": 9,
-  "uniques": 9,
+  "count": 8,
+  "uniques": 8,
   "views": [
-    {
-      "timestamp": "2022-04-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-24T00:00:00Z",
       "count": 1,
